--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     
     <title>ZYP.ONE | Form Builder Challenge</title>
   </head>
-  <body>
+  <body class="antialiased bg-gray-200 py-8">
     <noscript>
       <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
